style/style.css
@import url('https://fonts.googleapis.com/css?family=Inter|Space Grotesk');

@font-face {
  font-family: "Social";
  src: url("./social.ttf");
}

::selection {
    background: #893168;
    color: white;
}

* {
    margin: 0;
    padding: 0;
	transition: 0.5s;
}

p {
    color: #E5E7EB;
    font-family: "Inter";
}

body {
	width: 100%;
	display: flex;
	flex-wrap: wrap;
	flex-direction: column;
	align-items: center;
	z-index: 1;
}

header {
	width: 100%;
	padding-top: 30px;
	max-height: 200px;
	display: flex;
    flex-direction: column;
	align-items: center;
	justify-content: center;
	background-color: white;
}

#title {
	font-family: 'Space Grotesk', sans-serif;
	color: #2e1c2b;
	font-size: 2.4rem;
	font-weight: bold;
}

#title:hover + #line {
    width: 270px;
}

#line {
	height: 1px;
    flex-shrink: 0;
	min-width: 270px;
	width: 80%;
	background-color: #2e1c2b;
	border: none;
	margin-top: 5px;
    margin-bottom: 60px;
}

main {
	width: 100%;
	display: flex;
	flex-wrap: wrap;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

footer {
	width: 100%;
	height: 180px;
	margin-top: 200px;
	background-color: #2E1C2B;
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
    align-items: center;
}

.links {
    width: calc(8*40px);
    display: flex;
    justify-content: space-between;
}

.link {
    color: #E5E7EB;
    font-size: 40px;
    text-decoration: none;
    font-family: "Social";
}

.link:hover {
    transform: scale(1.1, 1.1);
}

#up {
    background-image: url(../images/up-arrow.svg);
    background-repeat: no-repeat;
    background-size: contain;
    height: 40px;
    width: 40px;
    filter: invert(90%);
}

#up:hover {
    transform: rotate(360deg);
}

#album {
	max-width: 1080px;
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	justify-content: center;
}

.photos {
	height: 340px;
	width: 340px;
	background-size: cover;
	margin: 10px;
	cursor: pointer;
	border-radius: 10px
}

.photos:hover {
    filter: brightness(1.2);
    box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 10px 0px;
    transform: translateY(-5px);
}

#zoom {
	background-size: cover;
	background-size: contain;
    border-radius: 12px;
    display: flex;
    justify-content: space-between;
}

#border {
	position: fixed;
	top: 100px;
	z-index: 3;
	background-color: #ebebeb;
    border-radius: 15px;
	justify-content: center;
	align-items: center;
	display: none;
}

#grayout {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: black;
	opacity: 0.8;
	z-index: 2;
	cursor: pointer;
	display: none;
}

#prev, #next {
	cursor: pointer;
	text-decoration: none;
	position: relative;
	height: 100%;
	width: 40%;
	background-image: url(../images/arrow.svg);
	background-size: 20px 60px;
    background-repeat: no-repeat;
    background-position: 95% center;
    filter: invert(100%);
}

#prev {
    transform: rotate(180deg);
}

#prev:hover, #next:hover {
	filter: invert(70%);
}

@media screen and (max-width: 1079px) {
    .album {
        max-width: 720px;
    }

    #border {
        top: 25px;
    }
}

@media screen and (max-width: 737px) {
    .album {
        max-width: 360px;
    }
}

@media screen and (max-width: 375px) {
	.links {
        width: calc(8*30px);
	}

	.link {
        font-size: 30px;
	}

	.photos {
	    height: 300px;
	    width: 300px;
	}
}

@media screen and (max-width: 340px) {
	.photos {
	    height: 280px;
	    width: 280px;
	}
}

